完善一些代码片段。